--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-    <head>Vets Against Insanity</head>
+    <head><title>Vets Against Insanity</title></head>
     <body>
 Vets Against Insanity
     </body>
