--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
     -->
       <link rel="stylesheet" href="css/normalize.css">
       <link rel="stylesheet" href="css/skeleton.css">
+      <link rel="stylesheet" href="css/vai.css">
     <title>React App</title>
   </head>
   <body>
